apps/reverse-proxy/development/scope-1/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: reverse-proxy
  namespace: reverse-proxy-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: reverse-proxy
          image: 104.248.9.67:5000/reverse-proxy:master-f047fe8-v.6
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 512Mi
      nodeSelector:
        workload: "mitcr-apps"
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "mitcr-apps"
          effect: "NoSchedule"
  strategy:
    canary: {}
