apps/reverse-proxy/development/scope-1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: reverse-proxy-development
  labels:
    app.kubernetes.io/managed-by: faro
    app: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
    - port: 80
      targetPort: 8080
